2008-12-19  Mike Kestner  <mkestner@novell.com>

	* generator/BoxedGen.cs: don't generate glue dependencies.
	* glib/*.cs: remove glibsharpglue usage except thread.c.
	* glib/glue/*.c: kill all but thread.c. need glib 2.20 to kill
	it eventually.
	* pango/Attr*.cs: kill glue usage.
	* pango/glue/*.c: kill all but generated.c. it's next.
	* gtk/TreeIter.custom: kill a dumb glibsharpglue usage.

2008-12-12  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: tagged for 2.12.7.  Bump svn version.
	* audit/base: update base apiinfo's for 2.12 stable api.

2008-12-08  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* glib/Signal.cs: Improve protection against invalid signals.

2008-12-02  Stephane Delcroix  <sdelcroix@novell.com>

	* generator/Ctor.cs:
	* generator/Method.cs:
	* generator/MethodBase.cs: refactor the Protection from Method to
	MethodBase, generate ctors with the correct protection too.

2008-12-01  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: automarshal TreeSelection.GetSelectedRows.
	* gtk/TreeSelection.custom: kill GetSelectedRows customization.
	[Fixes #450689]

2008-12-01  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: automarshal TreeView.Columns.
	* gtk/TreeView.custom: kill Columns customization.
	[Fixes #450685]

2008-11-28  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs: remove ref int workaround now that we fallback
	to signal-specific marshalers for G_TYPE_POINTER using signals.
	Fixes #450119.

2008-11-26  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Image.custom:
	* gtk/Gtk.metadata: obsolete Image.FromPixbuf, FromAnimation,
	FromFile setters in favor of already existing Pixbuf, Animation and
	File.

2008-11-26  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: bump svn version.
	* cairo/Makefile.am: policy config is hard-coded, not generated.

2008-11-26  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: prepend CFLAGS environment setting to AC_SUBST.